--- a/gb/16/6/14/n7995283.md
+++ b/gb/16/6/14/n7995283.md
@@ -1,58 +1,63 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/okxz2368/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/okxz2368/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/okxz2368/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/okxz2368/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/okxz2368/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2016国际地产博览会 海外地产气势强</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/06/201473_medium-e1465875955288.jpg" />
 <h6>主办单位不但举行一系列相关地产演讲，还祭出看展送土地的吸睛奖品。（廖蔚尹／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2016年06月14日讯】（大纪元记者谢平平台湾台北报导）台湾房地产历经3年的不稳定状态，国外房地产在此时崛起，成为台新投资标地。今年举行第2届的<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%9C%B0%E4%BA%A7%E5%8D%9A%E8%A7%88%E4%BC%9A.md#1">国际地产博览会</a>，近9成厂商皆<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%B5%B7%E5%A4%96%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">海外房地产</a>业者，如不动产中介全联会荣誉理事长李同荣“吉家网”、柬埔寨自建自售的松颖地产以及经营多国的亚太国际地产。</p>
+	<p>【大纪元2016年06月14日讯】（大纪元记者谢平平台湾台北报导）台湾房地产历经3年的不稳定状态，国外房地产在此时崛起，成为台新投资标地。今年举行第2届的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%9C%B0%E4%BA%A7%E5%8D%9A%E8%A7%88%E4%BC%9A.md#1">国际地产博览会</a>，近9成厂商皆<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%A4%96%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">海外房地产</a>业者，如不动产中介全联会荣誉理事长李同荣“吉家网”、柬埔寨自建自售的松颖地产以及经营多国的亚太国际地产。</p>
 <p>该展由中华民国不动产展览交流协会举办，周五开幕当日，双北的不动产开发商、代销、房仲经纪、建筑师等公会理事长皆到场致意，此外，台北市商业会理事长王应杰亦上台致词，台湾建筑安全履历协会理事长戴云发则到场与会，足见该展聚集了地产相关业者的极大期望；主办单位不但举行一系列相关地产演讲，还祭出看展送土地的吸睛奖品。</p>
-<figure id="attachment_7995342" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-7995342" src="https://i.epochtimes.com/assets/uploads/2016/06/201472_medium-450x300.jpg" alt="该展由中华民国不动产展览交流协会举办，周五开幕当日，双北的不动产开发商、代销、房仲经纪、建筑师等公会理事长皆到场致意。（廖蔚尹／大纪元）" width="450" b="300" /><figcaption class="wp-caption-text">该展由中华民国不动产展览交流协会举办，周五开幕当日，双北的不动产开发商、代销、房仲经纪、建筑师等公会理事长皆到场致意。（廖蔚尹／大纪元）?</figcaption></figure>
+<figure id="attachment_7995342" aria-describedby="caption-attachment-7995342" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/06/201472_medium-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-7995342" src="https://i.epochtimes.com/assets/uploads/2016/06/201472_medium-450x300.jpg" alt="该展由中华民国不动产展览交流协会举办，周五开幕当日，双北的不动产开发商、代销、房仲经纪、建筑师等公会理事长皆到场致意。（廖蔚尹／大纪元）" width="450" b="300" /></a><figcaption id="caption-attachment-7995342" class="wp-caption-text">该展由中华民国不动产展览交流协会举办，周五开幕当日，双北的不动产开发商、代销、房仲经纪、建筑师等公会理事长皆到场致意。（廖蔚尹／大纪元）?</figcaption></figure>
 <div class="articleimage2" align="center"></div>
-<div class="articleimage2" align="center">提供土地的主办单位中华民国不动产展览交流协会理事长张志诚表示，该展构想自2013年即开始酝酿，期望提供一个新的通路来贩售国内建案。2015年，国内建商参展仍多，2016年3月，国内放宽REITs投资海外限制，包含投资总额度与标地规范，在六月该展上，明显看到<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E6%B5%B7%E5%A4%96%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">海外房地产</a>业者占有九成，成为投资新标地，张志诚粗略估计，台湾去年投入海外房地产的热钱几乎是前年的7至8倍。</div>
+<div class="articleimage2" align="center">提供土地的主办单位中华民国不动产展览交流协会理事长张志诚表示，该展构想自2013年即开始酝酿，期望提供一个新的通路来贩售国内建案。2015年，国内建商参展仍多，2016年3月，国内放宽REITs投资海外限制，包含投资总额度与标地规范，在六月该展上，明显看到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B5%B7%E5%A4%96%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">海外房地产</a>业者占有九成，成为投资新标地，张志诚粗略估计，台湾去年投入海外房地产的热钱几乎是前年的7至8倍。</div>
 <p>中华民国不动产国际代销协会秘书长任毅豪表示，在国内地产持有税调高后，投报率相对降低，海外地产成为热门投资标地，粗估合法与不合法经纪业者约有700家，该会成立宗旨为提供业者教育训练，并辅导成立合法公司。今年8月将举行系列讲座，告诉民众投资海外房地产的注意事项。</p>
 <p>台湾房屋总执行长游明同到场坐镇，合作的日本商社亦到场观察台湾买气，他表示，日本地产现在情况内热外冷，正在起步中，民众可多加留意。松颖国际地产则在金边自建自售，已跳脱一般经纪业者。现场也有业者展示3D环景看屋工具，并能利用云端分析该消费者是否为准客户。</p>
-<figure id="attachment_7995346" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-7995346" src="https://i.epochtimes.com/assets/uploads/2016/06/201471_medium-1-450x300.jpg" alt="台湾房屋总执行长游明同到场坐镇，合作的日本商社亦到场观察台湾买气。（廖蔚尹／大纪元）" width="450" b="300" /><figcaption class="wp-caption-text">台湾房屋总执行长游明同到场坐镇，合作的日本商社亦到场观察台湾买气。（廖蔚尹／大纪元）</figcaption></figure>
+<figure id="attachment_7995346" aria-describedby="caption-attachment-7995346" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/06/201471_medium-1-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-7995346" src="https://i.epochtimes.com/assets/uploads/2016/06/201471_medium-1-450x300.jpg" alt="台湾房屋总执行长游明同到场坐镇，合作的日本商社亦到场观察台湾买气。（廖蔚尹／大纪元）" width="450" b="300" /></a><figcaption id="caption-attachment-7995346" class="wp-caption-text">台湾房屋总执行长游明同到场坐镇，合作的日本商社亦到场观察台湾买气。（廖蔚尹／大纪元）</figcaption></figure>
 <div class="articleimage2" align="center">
 <p style="text-align: left;">擎亚建设为国内少数参展建商，也是台湾第一家成立公益信托基金的建商，总经理吴家玮表示，身为二代，希望盖出CP值高的建物，如：龟山建案总价虽只有600万上下，但有1.5套卫浴、规划当层排气设施，希望营造新的生活态度。</p>
 </div>
-<p>2016<ahref="https://github.com/okxz2368/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%9C%B0%E4%BA%A7%E5%8D%9A%E8%A7%88%E4%BC%9A.md#1">国际地产博览会</a>将展至6月13日，并在当天抽出“看展送土地”的其他幸运民众。</p>
+<p>2016<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E9%99%85%E5%9C%B0%E4%BA%A7%E5%8D%9A%E8%A7%88%E4%BC%9A.md#1">国际地产博览会</a>将展至6月13日，并在当天抽出“看展送土地”的其他幸运民众。</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/29/n12070120.md#1">【利益台湾】时尚女王报到 陈璧君的文化美学拼图</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/21/n12048161.md#1">最新防疫推荐: 台湾千年金丝乌木 天地间最珍贵的【正能量】</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/1/n11993568.md#1">吃饱才有防疫力 你的厨房家电够给力吗？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/3/9/n11926721.md#1">节能除湿机推荐：智能自动除湿，一回家就享受舒适干爽空间</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13652604.md#1">看见改变的力量——学生妈妈眼中的大纪元（下）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/17/n13652569.md#1">看见改变的力量——学生妈妈眼中的大纪元（上）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649156.md#1">真相专刊-世界需要真善忍（2022年3月）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/1/20/n13517700.md#1">回家不用洗衣？除菌率99.99%，挑选“蒸洗脱烘”滚筒4大理由</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/19/n10919284.md#1" target="_blank">陋兰：当告密者成为英雄</a></li><li><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10625340.md#1" target="_blank">玉清心：文革“破四旧”不堪回首 但不能遗忘</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075692.md#1">脱北韩国议员：99%确定金正恩上周已死</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12076958.md#1">【拍案惊奇】朝媒报金正恩现身 习家邓家对呛？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076815.md#1">【新闻看点】美连6大动作 美中角力升级</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076209.md#1">不小心？赵立坚转推中共瞒疫实情</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076867.md#1">朝媒报金正恩现身竣工典礼 川普拒置评</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073796.md#1">否认与刘亦菲复合 宋承宪：手滑导致按赞帖文</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12075345.md#1">流浪猫妈妈带小猫上医院获得帮助 网友赞爆</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/2/n12078172.md#1">范冰冰被堵绝财路？传遭广电总局禁直播卖货</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12074176.md#1">台湾歌手大支再推新歌 呼吁向中共追责</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/5/1/n12076299.md#1">“流行天后”麦当娜自曝检测出中共病毒抗体</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/2/25/n11893623.md#1">【命理】他为何由相信命运变成不相信命运？</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/29/n12070494.md#1">玄武大帝除疫禳灾 人间留神迹</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073552.md#1">一生波折难掩其风华 东汉才女蔡文姬</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/29/n12070777.md#1">专管掠走命外之财的冥府武官</a></li>
-<li><a href="https://github.com/okxz2368/djy/blob/master/gb/20/4/30/n12073149.md#1">“留白”的艺术与人生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/okxz2368/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/14/n7995283.htm">2016国际地产博览会 海外地产气势强</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/6/14/n7995283.htm">2016国际地产博览会 海外地产气势强</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/okxz2368/djy/blob/master/gb/16/6/14/n7995283.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/okxz2368/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/okxz2368/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/okxz2368/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/okxz2368/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/6/14/n7995283.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
